Thu Oct 21 08:47:56 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * tests/Bug_3769_Regression/Foo.idl:
        * tests/Bug_3769_Regression/Foo.mpc:
        * tests/Bug_3769_Regression/Foo_exec.h:
        * tests/Bug_3769_Regression/Foo_exec.cpp:
          Reverted changes made by Jeff. Created a new test for
          explicit testing valuetypes.

        * tests/Bug_3890_Regression:
        * tests/Bug_3890_Regression/Foo.idl:
        * tests/Bug_3890_Regression/Foo.mpc:
          New test.

Thu Oct 21 08:19:03 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * bin/ciao_tests.lst:
          Corrector path to COPI tests.

        * connectors/dds4ccm/tutorials/Shapes/Tutorial/Code/Shapes_Control_comp/Shapes_Control_comp_exec.h:
        * connectors/dds4ccm/tutorials/Shapes/Tutorial/Code/Shapes_Control_comp/Shapes_Control_comp_exec.cpp:

        * connectors/dds4ccm/tutorials/Shapes/Tutorial/Code/Shapes_Receiver_comp/Shapes_Receiver_comp_exec.h:
        * connectors/dds4ccm/tutorials/Shapes/Tutorial/Code/Shapes_Receiver_comp/Shapes_Receiver_comp_exec.cpp:

        * connectors/dds4ccm/tutorials/Shapes/Tutorial/Code/Shapes_Sender_comp/Shapes_Sender_comp_exec.h:
        * connectors/dds4ccm/tutorials/Shapes/Tutorial/Code/Shapes_Sender_comp/Shapes_Sender_comp_exec.cpp:
          Regenerated using the TAO IDL compiler which also generates getters and setters for the attributes.

Wed Oct 20 20:00:24 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/Bug_3769_Regression/Foo_exec.h:
        * tests/Bug_3769_Regression/Foo_exec.cpp:

          Removed these files from the repository, since they
          are now generated.

        * tests/Bug_3769_Regression/Foo.mpc:
          Added -Gex option to IDL compiler command line, to
          generate the executor impl classes.

        * tests/Bug_3769_Regression/Foo.idl:

          Added interface and valuetype attributes, to test
          code generation of member declaration, initialization,